--- a/templates/default.html
+++ b/templates/default.html
@@ -136,7 +136,7 @@
 
         <div id="footer">
           <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="no-icon"><em>Submit Anonymous Feedback</em></a></p>
-          <a rel="home me contents" title="Gwern.net homepage" id="footer-logo" href="/index"></a>
+          <a rel="home me contents" title="Gwern.net homepage" id="footer-logo" href="/index">​</a>
         </div>
 
       </article>
