--- a/css/default.css
+++ b/css/default.css
@@ -1839,6 +1839,8 @@ code {
 
     border: 1px solid var(--GW-code-element-border-color);
     background-color: var(--GW-code-element-background-color);
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
 
     padding: 0 4px;
 
