Slightly tweak layout of mobile main TOC

--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -540,7 +540,7 @@ body.index #markdownBody ul > li:nth-of-type(n+2) {
         font-size: 1rem;
     }
     #TOC {
-		padding: 0.5em;
+		padding: 0.5em 0.5em 0.5em 0.625em;
 	}
 	#TOC li {
 		padding-left: 0;
