--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -611,6 +611,10 @@ header h1 {
     white-space: nowrap;
 }
 
+#page-source a {
+	font-variant-numeric: oldstyle-nums;
+}
+
 /*	Interpunct separators for the metadata fields; looks nicer than semicolons 
 	or slashes
  */
