--- a/css/links.css
+++ b/css/links.css
@@ -32,10 +32,11 @@
     left: 0;
     bottom: 0;
     width: 1px;
-    height: 0.75em;
+    height: 100%;
     background-image:
         linear-gradient(var(--GW-link-underline-gradient-line-color), var(--GW-link-underline-gradient-line-color));
-    background-size: 1px calc(100% - 0.1em);
+    background-size: 1px calc(0.75em - 0.1em);
+    background-position: 0 calc(100% - 0.1em);
     background-repeat: no-repeat;
 }
 .has-content:hover .indicator-hook::before {
