--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -3559,8 +3559,7 @@ ReaderMode = {
 								var(--GW-link-underline-gradient-line-color)),
 				linear-gradient(var(--GW-link-underline-gradient-line-color), 
 								var(--GW-link-underline-gradient-line-color));
-			background-size: 100% 1px, 1px calc(100% - 0.1em);
-			background-position: 0 calc(100% - 0.1em);
+			background-size: 100% 1px, 1px calc(0.75em - 0.1em);
         }
         ${(_π("body.reader-mode-active.masked-links-hidden #markdownBody .spawns-",
               [ "popup", "popin" ],
