--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -1458,7 +1458,8 @@ pre {
 /***********/
 
 figure img,
-figure video {
+figure video,
+figure svg {
     display: block;
     max-height: calc(100vh - 8em);
     max-width: 100%;
