--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -1140,7 +1140,8 @@ pre {
 /***********/
 
 figure img,
-figure video {
+figure video,
+figure svg {
     display: block;
     max-height: calc(100vh - 8em);
     max-width: 100%;
