--- a/css/default.css
+++ b/css/default.css
@@ -4912,6 +4912,7 @@ section.highlight-fading::before {
 #back-to-top svg {
     display: block;
     width: 100%;
+    height: 100%;
 }
 
 @media only screen and (max-width: 1144px) {
@@ -4937,11 +4938,20 @@ section.highlight-fading::before {
         bottom: 1rem;
     }
     #back-to-top a {
-        width: 1.5em;
+        width: 2.25em;
+        height: 2.25em;
         border: 1px solid currentColor;
-        background-color: var(--GW-body-background-color);
-        padding: 0.125em 0.25em;
+        padding: 0.25em 0.25em;
+        box-sizing: border-box;
     }
+	#back-to-top {
+        background-color: var(--GW-body-background-color);
+		background-image: linear-gradient(var(--GW-back-to-top-link-color), 
+										  var(--GW-back-to-top-link-color));
+		background-position: 0 0;
+		background-repeat: no-repeat;
+		background-size: 0 0;
+	}
 }
 
 /*************/
