--- a/css/links.css
+++ b/css/links.css
@@ -31,17 +31,24 @@
     position: absolute;
     left: 0;
     bottom: 0;
+    top: 0;
     width: 1px;
     height: 100%;
     background-image:
-        linear-gradient(var(--GW-link-underline-gradient-line-color), var(--GW-link-underline-gradient-line-color));
-    background-size: 1px calc(0.75em - 0.1em);
-    background-position: 0 calc(100% - 0.1em);
+        linear-gradient(var(--GW-link-underline-background-color), 
+                        var(--GW-link-underline-background-color)),
+        linear-gradient(var(--GW-link-underline-gradient-line-color), 
+                        var(--GW-link-underline-gradient-line-color));
+    background-size: 
+        1px 0.5em,
+        1px 1em;
+    background-position: 
+        0 0.1em,
+        0 calc(100% - 0.1em);
     background-repeat: no-repeat;
 }
-.has-content:hover .indicator-hook::before {
-    background-image:
-        linear-gradient(var(--GW-link-underline-gradient-line-color-hover), var(--GW-link-underline-gradient-line-color-hover));
+.has-content:hover {
+	--GW-link-underline-gradient-line-color: var(--GW-link-underline-gradient-line-color-hover);
 }
 .TOC .has-content,
 #sidebar .has-content,
