--- a/css/include/dark-mode-GENERATED.css
+++ b/css/include/dark-mode-GENERATED.css
@@ -56,8 +56,18 @@
 	--GW-collapse-summary-blockquote-hover-color: #333;
 	--GW-collapse-disclosure-button-color: #333;
 	--GW-collapse-disclosure-button-hover-color: #494949;
+	--GW-collapse-disclosure-button-color-15-percent-transparent: rgba(51, 51, 51, 0.85);
+	--GW-collapse-disclosure-button-hover-color-15-percent-transparent: rgba(73, 73, 73, 0.85);
+	--GW-collapse-disclosure-button-color-30-percent-transparent: rgba(51, 51, 51, 0.70);
+	--GW-collapse-disclosure-button-hover-color-30-percent-transparent: rgba(73, 73, 73, 0.70);
+	--GW-collapse-in-blockquote-disclosure-button-color: #5c5c5c;
+	--GW-collapse-in-blockquote-disclosure-button-hover-color: #6c6c6c;
+	--GW-collapse-in-blockquote-disclosure-button-color-15-percent-transparent: rgba(92, 92, 92, 0.85);
+	--GW-collapse-in-blockquote-disclosure-button-hover-color-15-percent-transparent: rgba(108, 108, 108, 0.85);
 	--GW-collapse-disclosure-button-top-part-text-color: #6c6c6c;
 	--GW-collapse-disclosure-button-bottom-part-text-color: #7c7c7c;
+	--GW-collapse-in-blockquote-disclosure-button-top-part-text-color: #7c7c7c;
+	--GW-collapse-in-blockquote-disclosure-button-bottom-part-text-color: #999;
 	--GW-collapse-disclosure-button-text-hover-color: #000;
 
     /*  Headings.
