--- a/css/default.css
+++ b/css/default.css
@@ -179,7 +179,7 @@
     height: 3rem;
     text-align: right;
     color: var(--GW-collapse-disclosure-button-top-part-text-color);
-    padding: 0.875rem 3rem;
+    padding: 1rem 3rem 0.75rem 3rem;
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z" fill="%23CCC"/></svg>');
     background-repeat: no-repeat;
     background-position: calc(100% - 1rem) 0.625rem;
@@ -299,11 +299,12 @@ section.collapse.expanded > .abstract-collapse:not(.abstract) {
     --button-color: var(--GW-collapse-disclosure-button-hover-color);
 }
 :not(section).collapse:not(.expanded) > .disclosure-button::before {
-    width: 3.25em;
-    height: 3.25em;
+    width: 3rem;
+    height: 3rem;
+    padding: 0;
     top: 0;
     right: 0;
-    padding: 0;
+    background-position: calc(100% - 1rem) 0.75rem;
 }
 :not(section).collapse:not(.expanded) > .disclosure-button::after {
     width: 10em;
@@ -688,6 +689,7 @@ hr::after,
     filter: drop-shadow(0 0 0 currentColor);
 }
 
+
 /*******************************************/
 /* DIRECTORY INDEXES & LINK BIBLIOGRAPHIES */
 /*******************************************/
@@ -720,9 +722,19 @@ blockquote .TOC a:hover::after {
     opacity: unset;
 }
 
-blockquote .collapse:not(.expanded) .see-also-separator > p:first-child {
+blockquote :not(section).collapse.annotation-see-also:not(.expanded) > .disclosure-button::before {
+    content: "Click to expand";
+    width: 10rem;
+    padding: 1rem 3rem 0.75rem 0;
+}
+blockquote :not(section).collapse.annotation-see-also:not(.expanded) > .disclosure-button::after {
+    display: none;
+}
+
+blockquote .collapse:not(.expanded).annotation-see-also > div > p:first-child {
 	margin-top: 0.5em;
 }
+
 
 /*************************/
 /* TAG DIRECTORY INDEXES */
@@ -731,6 +743,7 @@ blockquote .collapse:not(.expanded) .see-also-separator > p:first-child {
 .directory-indexes.columns ul {
     clear: none;
 }
+
 
 /***********/
 /* NUMBERS */
