default.css: citation subscripts: still not looking quite right inside links/headers (I assume the styling for those changes the spacing slightly somehow so needs a counter-adjustment)

--- a/css/default.css
+++ b/css/default.css
@@ -2642,6 +2642,7 @@ a .cite-author-plural::after {
     margin-left: 0.1em;
     white-space: nowrap;
 }
+a .cite-date { margin-left: 0em; }
 
 /*******************************/
 /* PAGE-SPECIFIC MODIFICATIONS */
