hakyll/default.html: link-bibliography transclude fix
the obvious thing doesn't work because '$' only exists at the Hakyll level, not the sub-Pandoc level... nasty hack to fix this by not closing the </div> in the Pandoc template (which Pandoc turns out to allow, not enforcing HTML validity at all), and putting the link-bibliography at the 'bottom' that way with the closing </div> (so the templating is now split in half, as it were)

--- a/templates/default.html
+++ b/templates/default.html
@@ -115,10 +115,13 @@
           </div>
         </div>
 
-        <noscript><div id="noscriptWarning" class="admonition warning"><div class="admonition-title"><p>[JS Disabled!]</p></div> <p>[For support of <a href="/Design" title="About: Gwern.net Design: principles, features, links, tricks">website features</a> (tablesorting, collapsible sections, image zooming, link annotation popups/popins, sidenotes), please enable JavaScript.]</p></div></noscript>
+        <noscript><div id="noscriptWarning" class="admonition warning"><div class="admonition-title"><p>[JS Disabled!]</p></div> <p>[For support of <a href="/Design" title="About: Gwern.net Design: principles, features, links, tricks">website features</a> (tablesorting, collapsible sections, image zooming, link annotation popups/popins & transclusions, sidenotes), please enable JavaScript.]</p></div></noscript>
         $endif$
 
         $body$
+
+        $if(index)$ $else$<div id="link-bibliography-transclusion"><a id="link-bibliography-link-footer-transclusion" href="/docs/link-bibliography$url$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include include-replace-container">bibliography</a></div>$endif$
+        </div> <!-- NOTE: unmatched, because it closes the opening <div> from $body$ Pandoc template */ -->
 
         <nav id="navigation">
           <a id="navigation-previous" class="link-local-not" rel="prev" href="$previous$" title="Link to previous page by topic, ‘$previous$’"
